--- a/announcement.css
+++ b/announcement.css
@@ -131,6 +131,17 @@
     margin-bottom: 40px;
 }
 
+.readmore{
+    font-family: 'Sora';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 30px;
+    text-decoration-line: underline;
+    cursor: pointer;
+    margin-left: 20px;
+}
+
 /* end article  */
 
 
@@ -169,7 +180,7 @@
         /* width: 80%; */
         /* margin-bottom: 30px; */
         width: 100%;
-        margin: 0 8px;
+        margin: 0 8px 60px 0;
         font-size: 14px;
         line-height: 100%;
     }
