--- a/seeking-list-partners.css
+++ b/seeking-list-partners.css
@@ -374,6 +374,17 @@
     -webkit-text-fill-color: transparent;
 }
 
+.bottom-head{
+    font-family: Sora;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 130%;
+    text-align: center;
+
+    margin-bottom: 120px;
+}
+
 /* Mobile CSS */
 
 .mobile{
