--- a/voting-activities.css
+++ b/voting-activities.css
@@ -33,6 +33,7 @@
     display: flex;
     /*flex-direction: row; */
     justify-content: space-between;
+    align-items: center;
     padding: 20px;
     margin-bottom: 20px;
 }
@@ -54,7 +55,7 @@
 .btn-vote{
     padding: 15px;
     height: 50px;
-    width: 200px;
+    width: 120px;
     margin-top: 10px;
     text-align: center;
 }
