--- a/buy-crypto.css
+++ b/buy-crypto.css
@@ -359,9 +359,8 @@
     }
     
     .section4-wrapper > .section4-right{
-        width: 100%;whatw
+        width: 100%;
     }
-
     .mobile{
         display: block;
     }
